--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
     </style>
+    <script src="https://kit.fontawesome.com/89906da866.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
