--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Tapestry&display=swap"
-    rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Tapestry&display=swap"
+      rel="stylesheet"
     />
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+      @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
     </style>
-    <script src="https://kit.fontawesome.com/89906da866.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/89906da866.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
-    
+
     <script src="https://use.fontawesome.com/2b0d1487b5.js"></script>
   </body>
 </html>
